<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_graph"
    app:startDestination="@id/nav_graph_home_fragment">

    <fragment
        android:id="@+id/nav_graph_home_fragment"
        android:name="mfstech.apps.powah.home.presenter.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/input_device"
            app:destination="@id/nav_graph_add_device_fragment" />
        <action
            android:id="@+id/open_details"
            app:destination="@id/nav_graph_details_fragment" />
        <action
            android:id="@+id/open_confirmation_dialog"
            app:destination="@id/nav_graph_confirmation_dialog" />
    </fragment>

    <fragment
        android:id="@+id/nav_graph_add_device_fragment"
        android:name="mfstech.apps.powah.input.presenter.InputFragment"
        android:label="@string/add_device_fragment_label"
        tools:layout="@layout/fragment_input">
        <argument
            android:name="device"
            android:defaultValue="@null"
            app:argType="mfstech.apps.powah.common.database.model.Device"
            app:nullable="true" />
        <action
            android:id="@+id/open_confirmation_dialog"
            app:destination="@id/nav_graph_confirmation_dialog" />
    </fragment>

    <fragment
        android:id="@+id/nav_graph_details_fragment"
        android:name="mfstech.apps.powah.details.presenter.DetailsFragment"
        android:label="@string/details_fragment_label"
        tools:layout="@layout/fragment_details">
        <argument
            android:name="device"
            app:argType="mfstech.apps.powah.common.database.model.Device" />
        <action
            android:id="@+id/input_device"
            app:destination="@id/nav_graph_add_device_fragment" />
        <action
            android:id="@+id/open_confirmation_dialog"
            app:destination="@id/nav_graph_confirmation_dialog" />
    </fragment>
    <dialog
        android:id="@+id/nav_graph_confirmation_dialog"
        android:name="mfstech.apps.powah.confirmation.ConfirmationDialogFragment"
        android:label="@string/confirmation_fragment_label"
        tools:layout="@layout/fragment_confirmation">
        <argument
            android:name="data"
            app:argType="mfstech.apps.powah.confirmation.ConfirmationDialogState" />
    </dialog>
</navigation>